; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/mm/extr_pgtable-frag.c_pte_fragment_free.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/mm/extr_pgtable-frag.c_pte_fragment_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.page = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pte_fragment_free(i64* %0, i32 %1) #0 {
  %3 = alloca i64*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.page*, align 8
  store i64* %0, i64** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i64*, i64** %3, align 8
  %7 = call %struct.page* @virt_to_page(i64* %6)
  store %struct.page* %7, %struct.page** %5, align 8
  %8 = load %struct.page*, %struct.page** %5, align 8
  %9 = getelementptr inbounds %struct.page, %struct.page* %8, i32 0, i32 0
  %10 = call i64 @atomic_read(i32* %9)
  %11 = icmp sle i64 %10, 0
  %12 = zext i1 %11 to i32
  %13 = call i32 @BUG_ON(i32 %12)
  %14 = load %struct.page*, %struct.page** %5, align 8
  %15 = getelementptr inbounds %struct.page, %struct.page* %14, i32 0, i32 0
  %16 = call i64 @atomic_dec_and_test(i32* %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %27

18:                                               ; preds = %2
  %19 = load i32, i32* %4, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %24, label %21

21:                                               ; preds = %18
  %22 = load %struct.page*, %struct.page** %5, align 8
  %23 = call i32 @pgtable_pte_page_dtor(%struct.page* %22)
  br label %24

24:                                               ; preds = %21, %18
  %25 = load %struct.page*, %struct.page** %5, align 8
  %26 = call i32 @__free_page(%struct.page* %25)
  br label %27

27:                                               ; preds = %24, %2
  ret void
}

declare dso_local %struct.page* @virt_to_page(i64*) #1

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i64 @atomic_read(i32*) #1

declare dso_local i64 @atomic_dec_and_test(i32*) #1

declare dso_local i32 @pgtable_pte_page_dtor(%struct.page*) #1

declare dso_local i32 @__free_page(%struct.page*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
